make response and data log

--- a/exercises/gif-test/index.html
+++ b/exercises/gif-test/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Pick category</h1>
     <select name="category" id="categorySelect"></select>
     <label for="categorySelect"></label>
     <div id="loadGifs"></div>
-</body>
+    <script src="/exercises/gif-test/index.js"></script>
+  </body>
 </html>
