load image to site

--- a/exercises/gif-test-new/index.html
+++ b/exercises/gif-test-new/index.html
@@ -12,7 +12,7 @@
       </header>
       <main>
         <div class="category-selection">
-          <select id="categoryDropdown">
+          <select id="categoryDropdown" onchange="loadGifs(this)">
             <option value="select">Select a category...</option>
           </select>
         </div>
