exercise is deprecated do to giphy api

--- a/exercises/gif-test-new/index.html
+++ b/exercises/gif-test-new/index.html
@@ -16,7 +16,8 @@
             <option value="select">Select a category...</option>
           </select>
         </div>
-        <div class="img-display" id="loadImage"></div>
+        <div class="img-display" id="loadImage">
+        </div>
       </main>
     </div>
 
