--- a/exercises/JsonPlaceholder/todo-responsive.html
+++ b/exercises/JsonPlaceholder/todo-responsive.html
@@ -9,7 +9,7 @@
     <header>
       <nav>
         <a href="index.html">Home Page</a>
-        <a href="todo.html">To-Do Page</a>
+        <a href="todo-responsive.html">To-Do Page</a>
       </nav>
     </header>
     <main>
@@ -19,6 +19,6 @@
       </button>
       <div class="todo-display" id="todoData"></div>
     </main>
-    <script src="todo.js"></script>
+    <script src="todo-responsive.js"></script>
   </body>
 </html>
