--- a/exercises/JsonPlaceholder/index.html
+++ b/exercises/JsonPlaceholder/index.html
@@ -9,7 +9,7 @@
     <header>
       <nav>
         <a href="index.html">Home Page</a>
-        <a href="todo.html">To-Do Page</a>
+        <a href="todo-responsive.html">To-Do Page</a>
       </nav>
     </header>
     <main>
