make user table, add pico

--- a/exercises/JsonPlaceholder/index.html
+++ b/exercises/JsonPlaceholder/index.html
@@ -10,6 +10,7 @@
       <nav>
         <a href="index.html">Home Page</a>
         <a href="todo-responsive.html">To-Do Page</a>
+        <a href="users.html">User Page</a>
       </nav>
     </header>
     <main>
