--- a/exercises/JsonPlaceholder/todo-responsive.html
+++ b/exercises/JsonPlaceholder/todo-responsive.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To-Do Page</title>
+
   </head>
   <body>
     <header>
@@ -20,6 +21,7 @@
       </button>
       <div class="todo-display" id="todoData"></div>
     </main>
-    <script src="scripts/todo-responssive.js"></script>
+    <script src="https://dohliam.github.io/dropin-minimal-css/switcher.js" type="text/javascript"></script>
+    <script src="scripts/todo-responsive.js"></script>
   </body>
 </html>
