--- a/exercises/JsonPlaceholder/users.html
+++ b/exercises/JsonPlaceholder/users.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To-Do Page</title>
+    <link rel="stylesheet" href="/exercises/JsonPlaceholder/pico.classless.css">
   </head>
   <body>
     <header>
