style with preface css

--- a/exercises/JsonPlaceholder/users.html
+++ b/exercises/JsonPlaceholder/users.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To-Do Page</title>
-    <link rel="stylesheet" href="/exercises/JsonPlaceholder/pico.classless.css">
+    <link rel="stylesheet" href="styles/preface.css" />
   </head>
-  <body>
+  <body class="container">
     <header>
       <nav>
         <a href="index.html">Home Page</a>
