--- a/exercises/JsonPlaceholder/index.html
+++ b/exercises/JsonPlaceholder/index.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page</title>
-    <link
-      rel="stylesheet"
-      href="/exercises/JsonPlaceholder/pico.classless.css" />
+    <link rel="stylesheet" href="styles/preface.css" />
   </head>
-  <body>
+  <body class="container">
     <header>
       <nav>
         <a href="index.html">Home Page</a>
