--- a/exercises/JsonPlaceholder/todo-responsive.html
+++ b/exercises/JsonPlaceholder/todo-responsive.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To-Do Page</title>
+    <link rel="stylesheet" href="styles/preface.css" />
 
+    <style>
+      button:hover {
+        background-color: rgb(34, 140, 104) !important;
+        filter: drop-shadow(6px) !important;
+      }
+    </style>
   </head>
-  <body>
+  <body class="container">
     <header>
       <nav>
         <a href="index.html">Home Page</a>
@@ -16,12 +23,15 @@
     </header>
     <main>
       <input type="text" class="todo-input" id="todoInput" />
-      <button type="button" id="submitTodo" onclick="fetchTodo()">
+      <button
+        style="background-color: beige"
+        type="button"
+        id="submitTodo"
+        onclick="fetchTodo()">
         Submit
       </button>
       <div class="todo-display" id="todoData"></div>
     </main>
-    <script src="https://dohliam.github.io/dropin-minimal-css/switcher.js" type="text/javascript"></script>
     <script src="scripts/todo-responsive.js"></script>
   </body>
 </html>
