create body container

--- a/exercises/weather/index.html
+++ b/exercises/weather/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="preface.css" />
   </head>
-  <body>
+  <body class="container">
     <header>
       <h1>Weather By City Capital</h1>
     </header>
