--- a/exercises/weather/index.html
+++ b/exercises/weather/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="preface.css" />
+    <link rel="stylesheet" href="styles/preface.css" />
   </head>
   <body class="container">
     <header>
@@ -26,19 +26,27 @@
           <span class="card-header-end">Forecast</span>
         </div>
         <div class="card-body">
-          <div class="current-weather">
-            <!--img
+          <span class="card">
+            <div class="weather-body" id="currentWeatherDay">
+              <!--img
             cloud condition on image
             -----
             precip
             temperature
             winds-->
+            </div>
+            <div class="weather-body" id="currentWeatherNight"></div>
+          </span>
+          <div class="forecast-weather">
+            <span class="card" id="day2"></span>
+            <span class="card" id="day3"></span>
+            <span class="card" id="day4"> </span>
+            <span class="card" id="day5"> </span>
           </div>
-          <div class="forecast-weather"></div>
         </div>
       </div>
     </main>
     <footer></footer>
-    <script src="index.js"></script>
+    <script src="scripts/index.js"></script>
   </body>
 </html>
