make main container

--- a/exercises/weather/index.html
+++ b/exercises/weather/index.html
@@ -10,7 +10,7 @@
     <header>
       <h1>Weather By City Capital</h1>
     </header>
-    <main>
+    <main class="container">
       <div class="content-header">
         <h4>Select a capital to get weather</h4>
       </div>
@@ -26,16 +26,13 @@
           <span class="card-header-end">Forecast</span>
         </div>
         <div class="card-body">
-          <span class="card">
-            <div class="weather-body" id="currentWeatherDay">
-              <!--img
+          <span class="card" id="currentWeather">
+            <!--img
             cloud condition on image
             -----
             precip
             temperature
             winds-->
-            </div>
-            <div class="weather-body" id="currentWeatherNight"></div>
           </span>
           <div class="forecast-weather">
             <span class="card" id="day2"></span>
