create switch for days of week

--- a/exercises/weather/index.html
+++ b/exercises/weather/index.html
@@ -26,20 +26,15 @@
           <span class="card-header-end">Forecast</span>
         </div>
         <div class="card-body">
-          <span class="card" id="currentWeather">
+          <div class="card" id="currentWeather">
             <!--img
             cloud condition on image
             -----
             precip
             temperature
             winds-->
-          </span>
-          <div class="forecast-weather">
-            <span class="card" id="day2"></span>
-            <span class="card" id="day3"></span>
-            <span class="card" id="day4"> </span>
-            <span class="card" id="day5"> </span>
           </div>
+          <div class="forecast-weather" id="forecastWeather"></div>
         </div>
       </div>
     </main>
