search for day index

--- a/exercises/weather/index.html
+++ b/exercises/weather/index.html
@@ -19,21 +19,14 @@
           <option value="select">Select...</option>
         </select>
       </div>
-      <div class="card">
+      <div class="card" id="weatherCard" style="display: none">
         <div class="card-header">
           <div class="location" id="location"></div>
           <span class="card-header-start">Current Weather</span>
           <span class="card-header-end">Forecast</span>
         </div>
         <div class="card-body">
-          <div class="card" id="currentWeather">
-            <!--img
-            cloud condition on image
-            -----
-            precip
-            temperature
-            winds-->
-          </div>
+          <div class="card" id="currentWeather"></div>
           <div class="forecast-weather" id="forecastWeather"></div>
         </div>
       </div>
