--- a/exercises/weather/index.html
+++ b/exercises/weather/index.html
@@ -25,7 +25,7 @@
           <div class="location" id="location"></div>
         </div>
         <div class="card-body">
-          <div class="card" id="currentWeather"></div>
+          <div class="current-weather" id="currentWeather"></div>
           <div class="forecast-weather" id="forecastWeather"></div>
         </div>
       </div>
