--- a/exercises/weather/index.html
+++ b/exercises/weather/index.html
@@ -20,7 +20,7 @@
           <option value="select">Select...</option>
         </select>
       </div>
-      <div class="card" id="weatherCard" style="display: none">
+      <div class="card" style="display: none">
         <div class="card-header">
           <div class="location" id="location"></div>
         </div>
