create html divs for weather

--- a/exercises/weather/index.html
+++ b/exercises/weather/index.html
@@ -25,7 +25,11 @@
           <div class="location" id="location"></div>
         </div>
         <div class="card-body">
-          <div class="forecast-weather" id="forecastWeather"></div>
+          <div class="current-weather" id="currentWeather"></div>
+          <div class="forecast-weather" id="forecastWeather1"></div>
+          <div class="forecast-weather" id="forecastWeather2"></div>
+          <div class="forecast-weather" id="forecastWeather3"></div>
+          <div class="forecast-weather" id="forecastWeather4"></div>
         </div>
       </div>
     </main>
