add forecast weather

--- a/exercises/weather/index.html
+++ b/exercises/weather/index.html
@@ -30,6 +30,8 @@
           <div class="forecast-weather" id="forecastWeather2"></div>
           <div class="forecast-weather" id="forecastWeather3"></div>
           <div class="forecast-weather" id="forecastWeather4"></div>
+          <div class="forecast-weather" id="forecastWeather5"></div>
+          <div class="forecast-weather" id="forecastWeather6"></div>
         </div>
       </div>
     </main>
