--- a/exercises/weather/index.html
+++ b/exercises/weather/index.html
@@ -9,10 +9,10 @@
   </head>
   <body class="container">
     <header>
-      <h1>Weather By City Capital</h1>
+      <h1 class="header">Weather By City Capital</h1>
     </header>
     <main class="container">
-      <div class="content-header">
+      <div class="content-header" style="display: block">
         <h4>Select a capital to get weather</h4>
       </div>
       <div class="dropdown">
