add loading circle on select delay

--- a/exercises/weather/index.html
+++ b/exercises/weather/index.html
@@ -16,6 +16,7 @@
         <h4>Select a capital to get weather</h4>
       </div>
       <div class="dropdown">
+        <img src="images/Rolling-1s-200px.gif" alt="" style="display: none" />
         <select id="cityDropdown">
           <option value="select">Select...</option>
         </select>
