--- a/exercises/weather/index.html
+++ b/exercises/weather/index.html
@@ -25,11 +25,21 @@
           <div class="location" id="location"></div>
         </div>
         <div class="card-body">
-          <div class="current-weather card" id="currentWeather"></div>
-          <div class="forecast-weather card" id="forecastWeather1"></div>
-          <div class="forecast-weather card" id="forecastWeather2"></div>
-          <div class="forecast-weather card" id="forecastWeather3"></div>
-          <div class="forecast-weather card" id="forecastWeather4"></div>
+          <div class="current-weather card">
+            <div id="currentWeather"></div>
+          </div>
+          <div class="forecast-weather card f1">
+            <div id="forecastWeather1"></div>
+          </div>
+          <div class="forecast-weather card f2">
+            <div id="forecastWeather2"></div>
+          </div>
+          <div class="forecast-weather card f3">
+            <div id="forecastWeather3"></div>
+          </div>
+          <div class="forecast-weather card f4">
+            <div id="forecastWeather4"></div>
+          </div>
         </div>
       </div>
     </main>
