add shadow to cards

--- a/exercises/weather/index.html
+++ b/exercises/weather/index.html
@@ -20,24 +20,24 @@
           <option value="select">Select...</option>
         </select>
       </div>
-      <div class="card" style="display: none">
+      <div class="card card-shadow" style="display: none">
         <div class="card-header">
           <div class="location" id="location"></div>
         </div>
         <div class="card-body">
-          <div class="current-weather card">
+          <div class="current-weather card card-shadow">
             <div id="currentWeather"></div>
           </div>
-          <div class="forecast-weather card f1">
+          <div class="forecast-weather card card-shadow f1">
             <div id="forecastWeather1"></div>
           </div>
-          <div class="forecast-weather card f2">
+          <div class="forecast-weather card card-shadow f2">
             <div id="forecastWeather2"></div>
           </div>
-          <div class="forecast-weather card f3">
+          <div class="forecast-weather card card-shadow f3">
             <div id="forecastWeather3"></div>
           </div>
-          <div class="forecast-weather card f4">
+          <div class="forecast-weather card card-shadow f4">
             <div id="forecastWeather4"></div>
           </div>
         </div>
